tests/syntax-error/tests.nu
use syntax-error.nu hello
use std/assert
assert equal (hello) "Hello, World!"